# Algorithms-In-Rust

./: Cargo.toml
src/: lib.rs  main.rs
src/Tree/: BinaryTree.rs  binary_tree.rs  mod.rs
tests/: main.rs
