[package]
name = "algorithms-in-rust"
version = "0.1.0"
authors = ["zhaiqiming <zhaiqimingac@outlook.com>"]
edition = "2018"

description = "Common algorithms and data structures for programming contests"
repository = "https://github.com/zhaiqiming/Algorithms-In-Rust.git"
readme = "README.md"
categories = ["algorithms", "data-structures"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
